PanelView: Do not crash when the state is transitioning

BUG: 373461